<resources>
    <string name="app_name">UCSD Bulletin Board</string>
    <string name="hello_world">Hello world!</string>
    <string name="create_event_title">Create Event</string>
    <string name="input_event_title">Title: </string>
    <string name="input_event_description">Description: </string>
    <string name="submit_event_button">Submit</string>
    <string name="action_settings">Settings</string>
    <string name="drawer_opened">Drawer Opened</string>
    <string name="drawer_closed">Drawer Closed</string>
    <string name="title_activity_create_account">CreateAccountAct</string>
    <string name="create_new_event">Create New Event</string>
    <string name="pick_time">Click to Pick a Time</string>
    <string name="pick_date">Click to Pick a Date</string>
    <string name="title_activity_profile">Profile</string>
    <string name="profile_name">Name</string>
    <string name="profile_email">Email</string>
    <string name="profile_phone">Phone</string>
    <string name="profile_address">Address</string>
    <string name="create_event_category">Choose a Category: </string>
    <string name="category_entertainment">Entertainment </string>
    <string name="category_educational">Educational </string>
    <string name="category_social">Social </string>
    <string name="category_miscellaneous">Miscellaneous </string>
    <string name="ArtCat">Arts, Culture, and More </string>
    <string name="FitnessCat">Fitness and Wellbeing</string>
    <string name="InfoCat">Seminar/Info Session </string>
    <string name="ComInvCat">Community Involvement </string>
    <string name="WeekendCat">Weekend Event </string>

</resources>
